--- a/addons/my-first-addon/style.css
+++ b/addons/my-first-addon/style.css
@@ -9,22 +9,29 @@
 .sa-custom-block-folder-popup{
   pointer-events: none;
   background-color: rgba(255, 255, 255, 0.502);
-  padding: 2px;
   border-radius: 4px;
+  padding: 2px;
+  z-index: 100;
 }
 
 .sa-custom-block-folder-popup span{
   font-size: 8pt;
   font-weight: bold;
   padding: 2px;
-  background-color: rgb(115, 115, 115);
+  background-color: rgb(168, 168, 168);
   color: white;
+  vertical-align: middle;
+  border: 1px solid rgb(132, 132, 132)
 }
 .sa-custom-block-folder-popup span.sa-folder-separator{
   background-color: transparent;
-  color:rgb(115, 115, 115);
+  color:rgb(168, 168, 168);
+  font-size: 12pt;
+  border: none;
 }
 
 .sa-custom-block-folder-popup span:last-child{
-  background-color: rgb(244, 80, 145);
+  background-color: rgb(255, 102, 128);
+  border: 1px solid rgb(255, 51, 85);
+  font-weight: 500;
 }
